--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,19 @@
 
 
         </div>
-        <div id="gameArea"  style="display: none;">
-            
-        </div>
+        <div id="gameArea" style="display: none;">
+            You:
+            <div id="player1Choice">
+               <button class="rock" onclick="sendChoice('Rock')">Rock</button>
+               <button class="paper" onclick="sendChoice('Paper')">Paper</button>
+               <button class="scissor" onclick="sendChoice('Scissor')">Scissors</button>
+             </div>
+         </div>
+         Opponent:
+         <div id="player2Choice">
+             <p id="opponentState">Waiting for Opponent</p>
+         </div>
+      
         <div id="winnerArea">
 
 
