--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
 
 
         </div>
+        <button id="continueButton" style="display: none;" onclick="continueGame()">Продовжити</button>
     </div>
 
 
